--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: Felixzz
+name: Felixzz的博客
 
 # Short bio or description (displayed in the header)
 description: 让世界更美好
