add duoshuo config

--- a/_config.yml
+++ b/_config.yml
@@ -75,3 +75,8 @@ exclude:
     - LICENSE
     - README.md
     - CNAME
+
+comments :
+     provider : duoshuo
+     duoshuo :
+     short_name : felixzz
