--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Felixzz的博客
 
 # Short bio or description (displayed in the header)
-description: 让世界更美好
+description: 让世界更美好,Test
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
