--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: Felix的博客
+name: Felix's Blog
 
 # Short bio or description (displayed in the header)
 description: When you want something all the universe conspires in helping you achieve it.
