--- a/_config.yml
+++ b/_config.yml
@@ -1,77 +1,115 @@
-#
-# This file contains configuration flags to customize your site
-#
+# ---------------- #
+#   Main Configs   #
+# ---------------- #
+baseurl:
+url: http://aoaojava.com
+date_format: "ordinal"
+title: Felix's Blog
+subtitle: "打码改变人生"
+description: "孙健的个人博客"
+keywords: Felix, Jian Sun, Felixzz, sunjian
+favicon: /lufei.png
+timezone: Asia/Shanghai
+encoding: "utf-8"
+side_bar_repo_limit: 5
 
-# Name of your site (displayed in the header)
-name: Felix's Blog
+# ---------------- #
+#      Author      #
+# ---------------- #
+author: Felix Sun
+organization: , Inc.
+organization_url: https://www.aoaojava.com
+location: Beijing, China
+email: felix.sunjian@gmail.com
 
-# Short bio or description (displayed in the header)
-description: When you want something all the universe conspires in helping you achieve it.
+# ---------------- #
+#    Navigation    #
+# ---------------- #
+navs:
+  -
+    href: /
+    label: 首页
 
-# URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://avatars0.githubusercontent.com/u/5077989?v=3&s=460
+  -
+    href: /categories/
+    label: 分类
 
-#
-# Flags below are optional
-#
+  -
+    href: /wiki/
+    label: 维基
 
-# Includes an icon in the footer for each username you enter
-footer-links:
-  weibo: sjnet
-  dribbble:
-  email: felix.sunjian@gmail.com
-  facebook:
-  flickr:
-  github:
-  instagram:
-  linkedin:
-  pinterest:
-  rss: # just type anything here for a working RSS icon, make sure you set the "url" above!
-  twitter: jekyllrb
-  stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
-  youtube: # channel/<your_long_string> or user/<user-name>
-  googleplus: # anything in your profile username that comes after plus.google.com/
+  -
+    href: /links/
+    label: 链接
 
-# Enter your Disqus shortname (not your username) to enable commenting on posts
-# You can find your shortname on the Settings page of your Disqus account
-disqus:
+  -
+    href: /about/
+    label: 关于
 
-# Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
-google_analytics: UA-87452561-1
+# ---------------- #
+#       RSS        #
+# ---------------- #
+subscribe_rss: /feed.xml
 
-# Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
-# Used for Sitemap.xml and your RSS feed
-url:
-
-# If you're hosting your site at a Project repository on GitHub pages
-# (http://yourusername.github.io/repository-name)
-# and NOT your User repository (http://yourusername.github.io)
-# then add in the baseurl here, like this: "/repository-name"
-baseurl: ""
-
-#
-# !! You don't need to change any of the configuration flags below !!
-#
-
-markdown: redcarpet
-highlighter: pygments
-permalink: /:title/
-
-# The release of Jekyll Now that you're using
-version: v1.1.0
-
-# Set the Sass partials directory, as we're using @imports
-sass:
-  style: :expanded # You might prefer to minify using :compressed
-
-# Use the following plug-ins
+# ---------------- #
+#      Jekyll      #
+# ---------------- #
+markdown: kramdown
+kramdown:
+    input: GFM
+highlighter: rouge
+paginate: 8
+lsi: false
+quiet: false
+excerpt_separator: "\n\n"
+permalink: /:year/:month/:day/:title/
 gems:
-  - jekyll-sitemap # Create a sitemap using the official Jekyll sitemap gem
+    - jekyll-github-metadata
+    - rouge
+#     - jekyll-html-pipeline
+    - jekyll-paginate
+    - jekyll-sitemap
+    - jekyll-feed
+    - jemoji
+#     - jekyll-mentions
+collections:
+    wiki:
+        output: true
+        permalink: /wiki/:path/
 
-# Exclude these files from your production _site
-exclude:
-    - Gemfile
-    - Gemfile.lock
-    - LICENSE
-    - README.md
-    - CNAME
+repository: mzlogin/mzlogin.github.io
+
+# ---------------- #
+#      Socials     #
+# ---------------- #
+github_username:
+douban_username:
+facebook_username:
+weibo_username: sjnet
+zhihu_username:
+twitter_username:
+
+# ---------------- #
+#      Comments    #
+# ---------------- #
+# support provider: disqus, duoshuo
+comments_provider: duoshuo
+# !!!重要!!! 请修改下面两个用户名为你自己申请的
+# !!!Important!!! Please modify usernames below to yours
+duoshuo_username: felixzz
+disqus_username:
+# 在使用 disqus 的时候可点击显示多说评论框
+lazy_load_duoshuo: true
+
+# ---------------- #
+#    Analytics     #
+# ---------------- #
+google:
+    analytics_id: UA-87452561-1
+
+# ---------------- #
+#      Datas       #
+# ---------------- #
+skill_software_keywords: [Java]
+skill_mobile_app_keywords: []
+skill_windows_keywords: []
