--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ side_bar_repo_limit: 5
 #      Author      #
 # ---------------- #
 author: Felix Sun
-organization: , Inc.
+organization: aoaojava, Inc.
 organization_url: https://www.aoaojava.com
 location: Beijing, China
 email: felix.sunjian@gmail.com
