--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ baseurl:
 url: http://aoaojava.com
 date_format: "ordinal"
 title: Felix's Blog
-subtitle: "打码改变人生"
+subtitle: "When you want something all the universe conspires in helping you achieve it."
 description: "孙健的个人博客"
 keywords: Felix, Jian Sun, Felixzz, sunjian
 favicon: /lufei.png
