--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 baseurl:
 url: http://aoaojava.com
 date_format: "ordinal"
-title: Felix's Blog
+title: Java学习日志
 subtitle: "When you want something all the universe conspires in helping you achieve it."
 description: "孙健的个人博客"
 keywords: Felix, Jian Sun, Felixzz, sunjian
