--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ baseurl:
 url: http://aoaojava.com
 date_format: "ordinal"
 title: Java学习日志
-subtitle: "When you want something all the universe conspires in helping you achieve it."
+subtitle: "Do one thing at a time, and do well."
 description: "孙健的个人博客"
 keywords: Felix, Jian Sun, Felixzz, sunjian
 favicon: /lufei.png
