--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 baseurl:
 url: http://aoaojava.com
 date_format: "ordinal"
-title: Java学习日志
+title: Felixzz
 subtitle: "Do one thing at a time, and do well."
 description: "孙健的个人博客"
 keywords: Felix, Jian Sun, Felixzz, sunjian
