--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ side_bar_repo_limit: 5
 # ---------------- #
 author: Felix Sun
 organization: aoaojava, Inc.
-organization_url: https://www.aoaojava.com
+organization_url: http://www.aoaojava.com
 location: Beijing, China
 email: felix.sunjian@gmail.com
 
